# fixtup

./: .alfred.toml  .editorconfig  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Pipfile  README.md  opencode.json  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  publish.yml  validate_examples.yml
alfred/: ci.py  dist.py  doc.py  docs.py  lint.py  publish.py  tests.py
backlog/: config.yml
backlog/tasks/: task-1 - Support-de-docker-compose-en-plus-de-docker-compose-pour-les-installations-dubuntu-plus-récente-dans-le-plugin-docker.md  task-2 - Move-the-project-from-setup.cfg-to-poetry-2.0.md  task-3 - Migrate-example-projects-to-Poetry-and-install-fixtup-as-local-dependency.md
docs/diagram/: execution_order.excalidraw  fixture_livecycle.excalidraw  principle-simplified.excalidraw  principle.excalidraw
docs/source/: api.rst  command_line.rst  concepts.rst  conf.py  getting_started.rst  handbook.rst  index.rst  install.rst  installation.rst  limits.rst  plugin.rst  requirements.txt  support.rst
docs/source/plugins/: docker.rst  dotenv.rst
examples/: README.md
examples/datapipeline_ftp/: README.md  ci.sh  pyproject.toml  setup.cfg
examples/datapipeline_ftp/src/datapipeline_ftp/: app.py
examples/datapipeline_ftp/tests/fixtures/ftp_server/: .env  docker-compose.yml  fixtup.yml
examples/datapipeline_ftp/tests/fixtures/ftp_server/.hooks/: hook_setup_data.py  hook_started.py.sample  hook_teardown_data.py.sample
examples/datapipeline_ftp/tests/integrations/: test_pipeline_weather_publication.py
examples/kanban_flask_postgresql/: README.md  ci.sh  pyproject.toml  setup.cfg
examples/kanban_flask_postgresql/src/kanban/: app.py  database.py  model.py
examples/kanban_flask_postgresql/tests/acceptances/: test_app.py
examples/kanban_flask_postgresql/tests/fixtures/pgsql/: docker-compose.yml  fixtup.yml
examples/kanban_flask_postgresql/tests/fixtures/pgsql/.hooks/: hook_started.py
examples/kanban_flask_postgresql/tests/fixtures/simple_board/: fixtup.yml
examples/kanban_flask_postgresql/tests/fixtures/simple_board/.hooks/: hook_setup_data.py
examples/kanban_flask_postgresql/tests/fixtures/simple_board_with_wip/: fixtup.yml
examples/kanban_flask_postgresql/tests/fixtures/simple_board_with_wip/.hooks/: hook_setup_data.py
examples/kanban_flask_sqlite/: README.md  ci.sh  pyproject.toml  setup.cfg
examples/kanban_flask_sqlite/src/kanban/: app.py  database.py  model.py
examples/kanban_flask_sqlite/tests/acceptances/: test_app.py
examples/kanban_flask_sqlite/tests/fixtures/simple_board/.hooks/: hook_started.py
examples/kanban_flask_sqlite/tests/fixtures/simple_board_with_wip/: .env  fixtup.yml
examples/kanban_flask_sqlite/tests/fixtures/simple_board_with_wip/.hooks/: hook_started.py
examples/kanban_flask_sqlite/tests/integrations/: test_database.py
examples/postgresql/: README.md  pyproject.toml  setup.cfg
examples/postgresql/tests/fixtures/database_context/: docker-compose.yml
examples/postgresql/tests/fixtures/database_context/.hooks/: hook_started.py
examples/unittest/: README.md  ci.sh  pyproject.toml  setup.cfg
examples/unittest/lib/: utils.py
examples/unittest/tests/fixtures/thumbnail_context/: fixture.yml
examples/unittests/: setup.cfg
examples/unittests/tests/integrations/: test_utils.py
src/fixtup/: __init__.py  context.py  ctx.py  exceptions.py  factory.py  fixtup.py  fixture.py  logger.py  os.py
src/fixtup/cli/: base.py
src/fixtup/cli/commands/: info.py  init.py  new.py
src/fixtup/entity/: context.py  fixtup.py  fixtup_process.py  fixture.py  fixture_template.py  plugin.py  project_manifest.py  settings.py
src/fixtup/fixture/: base.py  factory.py
src/fixtup/fixture_template/: base.py
src/fixtup/helper/: __init__.py  base.py
src/fixtup/hook/: base.py  factory.py  mock.py  python.py
src/fixtup/lib/: __init__.py  conditions.py  enum.py  env.py  list.py  signal.py  signal.pyi
src/fixtup/plugin/: base.py  event.py  factory.py  mock.py  python.py
src/fixtup/plugins/: docker.py  dotenv.py  dummy_plugin.py  dummy_plugin_error.py
src/fixtup/prompt/: __init__.py  base.py  factory.py  mock.py  prompt_toolkit.py
src/fixtup/scaffold/: base.py
src/fixtup/scaffold/resource/: fixtup.yml.j2
src/fixtup/settings/: __init__.py  base.py  factory.py  module.py  pyproject_toml.py  setup_cfg.py
src/fixtup/settings/resource/: pyproject_toml_settings.in
src/fixtup/settings/resources/: pyproject_toml_settings.in  setup_cfg_settings.in
src/fixtup/tests/: README.md  logger.py  settings.py
tests/acceptances/: test_cli.py  test_fixtup.py  test_helper.py
tests/fixtures/: fixture_context.py  fixture_ctx.py
tests/fixtures/fixtup/docker_redis/: docker-compose.yml
tests/fixtures/fixtup/docker_webserver/: docker-compose.yml
tests/fixtures/fixtup/fixtup_hook/: setup.cfg
tests/fixtures/fixtup/fixtup_project/: setup.cfg
tests/fixtures/fixtup/fixtup_project_missing_fixtup_directory/: setup.cfg
tests/fixtures/fixtup/manifest_without_info/: fixture.yml
tests/fixtures/fixtup/manifests/: pyproject.toml  setup.cfg
tests/fixtures/fixtup/manifests_tool_version/: pyproject.toml
tests/integrations/: README.md
tests/integrations/fixture/: test_fixture.py  test_fixture_engine.py
tests/integrations/fixture_template/: test_fixture_template.py
tests/integrations/helper/: test_helper.py
tests/integrations/hook/: test_python.py
tests/integrations/plugin/: test_python_plugin_engine.py
tests/integrations/plugins/: test_docker.py  test_dotenv.py
tests/integrations/prompt/: test_prompt_toolkit.py
tests/integrations/scaffold/: test_base.py
tests/integrations/settings/: test_base.py  test_pyproject_toml.py  test_settings.py  test_setup_cfg.py
tests/units/: test_factory.py
tests/units/entity/: test_fixture.py  test_project_manifest.py  test_settings.py
tests/units/hooks/: test_python.py
tests/units/lib/: env.py  test_enum.py
tests/units/plugin/: test_python_plugin_engine.py
(+26 files in other folders)
