[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fixtup"
dynamic = ["version"]
description = "integration testing on steroids"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10,<4.0"
authors = [
    {name = "Fabien Arcellier", email = "fabien.arcellier@gmail.com"}
]
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: Mocking",
]
keywords = ["testing", "fixtures", "integration", "docker", "pytest"]

[project.urls]
Documentation = "https://fixtup.readthedocs.io/en/latest/index.html"
Source = "https://github.com/FabienArcellier/fixtup"

[project.scripts]
fixtup = "fixtup.cli.base:cli"

[tool.poetry]
version = "0.2.0"
packages = [
    { include = "fixtup", from = "src" }
]
include = [
    { path = "src/fixtup/**/resource/**/*" },
    { path = "src/fixtup/py.typed" },
]

[tool.poetry.dependencies]
attrs = "^25.3.0"
click = "^8.0.0"
jinja2 = "^3.1.3"
prompt_toolkit = "^3.0.51"
plumbum = "^1.8.2"
pyyaml = "^6.0.1"
python-dotenv = "^1.1.1"
requests = "^2.31.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
alfred-cli = "^2.2.7"
build = "^1.2.2"
mypy = "^1.10.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.1"
types-toml = "^0.10.8"
twine = "^5.1.0"

[tool.poetry.group.dev_windows.dependencies]
alfred-cli = "^2.2.7"
types-pyyaml = "^6.0.1"
types-toml = "^0.10.8"

[tool.mypy]
ignore_missing_imports = true

[tool.fixtup]
fixtures = "tests/fixtures/fixtup"
plugins = [
    "fixtup.plugins.dotenv",
    "fixtup.plugins.docker",
]
