[metadata]
name = fixtup
version = 0.1.0
description = "integration testing on steroids"
long_description = file: README.md
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
license = "MIT"
readme = "README.md"

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
include_package_data = True

install_requires =
    attrs
    jinja2
    prompt_toolkit
    toml

[options.package_data]
fixtup=**/resources/**/*


[options.packages.find]
where = src

[options.extras_require]
dev =
    alfred-cli
    click
    mypy
    pyyaml
    sphinx
    sphinx_rtd_theme
    types-PyYAML
    types-toml

[options.entry_points]
console_scripts =
    fixtup = fixtup.cli.base:cli

[fixtup]
fixtures = tests/fixtures/fixtup
