[metadata]
name = fixtup
version = attr: fixtup.__version__
description = integration testing on steroids
long_description = file: README.md
long_description_content_type = text/markdown
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
license = "MIT"
readme = "README.md"

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
include_package_data = True

install_requires =
    attrs
    jinja2
    prompt_toolkit
    python-dotenv
    toml

[options.package_data]
fixtup=**/resources/**/*


[options.packages.find]
where = src

[options.extras_require]
dev =
    alfred-cli
    build
    click
    mypy
    pyyaml
    sphinx
    sphinx_rtd_theme
    types-PyYAML
    types-toml
    twine

[options.entry_points]
console_scripts =
    fixtup = fixtup.cli.base:cli

[fixtup]
fixtures = tests/fixtures/fixtup
plugins=
    fixtup.plugins.dotenv
    fixtup.plugins.docker


[mypy]
ignore_missing_imports = True
