[metadata]
name = fixtup
version = attr: fixtup.__version__
description = integration testing on steroids
long_description = file: README.md
long_description_content_type = text/markdown
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Acceptance
    Topic :: Software Development :: Testing :: Mocking
license = MIT
readme = README.md
url = https://github.com/FabienArcellier/fixtup
project_urls =
    Documentation = https://fixtup.readthedocs.io/en/latest/index.html
    Source = https://github.com/FabienArcellier/fixtup

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
include_package_data = True

install_requires =
    attrs
    click
    jinja2
    prompt_toolkit
    plumbum
    pyyaml
    python-dotenv
    requests
    toml

[options.package_data]
fixtup=**/resource/**/*
fixtup_typing=src/fixtup/py.typed


[options.packages.find]
where = src

[options.extras_require]
dev =
    alfred-cli
    build
    mypy
    sphinx
    sphinx_rtd_theme
    types-requests
    types-PyYAML
    types-toml
    twine

dev_windows =
    alfred-cli
    types-PyYAML
    types-toml

[options.entry_points]
console_scripts =
    fixtup = fixtup.cli.base:cli

[fixtup]
fixtures = tests/fixtures/fixtup
plugins=
    fixtup.plugins.dotenv
    fixtup.plugins.docker


[mypy]
ignore_missing_imports = True
