[metadata]
name = datapipeline-ftp

[options]
packages = find:
package_dir =
    =src
install_requires =
    apscheduler
    requests
    ftputil

[options.extras_require]
dev =
    fixtup
    freezegun
    pytest

[options.packages.find]
where = src

[fixtup]
fixtures=tests/fixtures
plugins=
    fixtup.plugins.dotenv
    fixtup.plugins.docker
