[metadata]
name = kanban_flask_postgresql

[options]
packages = find:
package_dir =
    =src
install_requires =
    flask
    psycopg2-binary
    sqlalchemy


[options.extras_require]
dev =
    fixtup

[options.packages.find]
where = src

[fixtup]
fixtures=tests/fixtures
plugins=
    fixtup.plugins.dotenv
    fixtup.plugins.docker
