[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kanban-flask-sqlite"
version = "0.1.0"
description = "Example: Kanban API with Flask and SQLite"
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
packages = [
    { include = "kanban", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
sqlalchemy = "^2.0.0"
fixtup = { path = "../..", develop = true }

[tool.fixtup]
fixtures = "tests/fixtures"
plugins = [
    "fixtup.plugins.dotenv",
    "fixtup.plugins.docker",
]
