[metadata]
name = kanban_flask_sqlite

[options]
packages = find:
package_dir =
    =src
install_requires =
    flask
    sqlalchemy

[options.extras_require]
dev =
    fixtup

[options.packages.find]
where = src

[fixtup]
fixtures=tests/fixtures
plugins=
    fixtup.plugins.dotenv
    fixtup.plugins.docker
