[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "unittest-example"
version = "0.1.0"
description = "Example: Using fixtup with unittest for image thumbnail generation"
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
fixtup = { path = "../..", develop = true }

[tool.fixtup]
fixtures = "tests/fixtures"
plugins = [
    "fixtup.plugins.dotenv",
    "fixtup.plugins.docker",
]
